made a lot more progress on mobile responsiveness, need to fix issue where main separator dissapears when input is clicked. Still need to add music functionality and my links

--- a/src/components/homepage/user/userInfo.css
+++ b/src/components/homepage/user/userInfo.css
@@ -139,12 +139,29 @@
         }
     }
 }
+
+@media only screen and (max-width: 415px) {
+    .userInfo {
+        button {
+            width: 25%;
+        }
+    }
+}
+
 @media only screen and (max-width: 375px) {
     .userInfo {
         .user {
             h3 {
                 font-size: 18px;
             }
+        }
+    }
+}
+
+@media only screen and (max-width: 335px) {
+    .userInfo {
+        button {
+            width: 35%;
         }
     }
 }
